corrected index on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1005,7 +1005,6 @@
         .mobile-index-intro {
           width: 100% !important;
           text-align: center;
-          margin-top: 100%;
           display: block;
           background-color: #333a44;
           padding: 4%;
